--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
 
           docker buildx build --platform linux/amd64 -t "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" . --push
 
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
   Continuous-Deployment:
     name: Continuous Deployment
@@ -92,6 +92,10 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
         run: |
+          if [ -z "$ECR_REPOSITORY" ]; then
+            echo "❌ ERROR: ECR_REPOSITORY is not set. Please define 'ECR_REPOSITORY_NAME' in GitHub secrets."
+            exit 1
+          fi
           docker pull "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
 
       - name: Stop and remove existing container if running
@@ -108,6 +112,10 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
         run: |
+          if [ -z "$ECR_REPOSITORY" ]; then
+            echo "❌ ERROR: ECR_REPOSITORY is not set. Please define 'ECR_REPOSITORY_NAME' in GitHub secrets."
+            exit 1
+          fi
           docker run -d -p 8080:8080 --ipc="host" --name=networksecurity \
             -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
