--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,17 +94,6 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Debug Secrets
-        env:
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-        run: |
-          if [ -z "$ECR_REPOSITORY" ]; then
-            echo "❌ DEBUG: ECR_REPOSITORY is empty or unset"
-            exit 1
-          else
-            echo "✅ DEBUG: ECR_REPOSITORY is set (value masked for security)"
-          fi
-
       - name: Check disk space
         run: |
           echo "Checking available disk space..."
@@ -149,6 +138,9 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
           if [ -z "$ECR_REPOSITORY" ]; then
             echo "❌ ERROR: ECR_REPOSITORY is not set. Please define 'ECR_REPOSITORY_NAME' in GitHub secrets."
@@ -156,9 +148,9 @@ jobs:
           fi
           echo "Running container from image: $ECR_REGISTRY/$ECR_REPOSITORY:latest"
           docker run -d -p 8080:8080 --ipc="host" --name=networksecurity \
-            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            -e AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID" \
+            -e AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY" \
+            -e AWS_REGION="$AWS_REGION" \
             "$ECR_REGISTRY/$ECR_REPOSITORY:latest"
 
       - name: Clean up Docker system
